# comfyui_fk_server

./: .gitignore  README.md  __init__.py  fk_server.py  ini.json.bak  pyproject.toml  requirements.txt  server.py
node/: imgedit.py  tietu_node.py
server/: fkhttp.js  fkimg.py  install.bat  install.sh  package-lock.json  package.json  sr.json  suanli.js  suanliio.js  u.js
web/: home.html
web/cssjs/: fk.css  fk.js  fkimged.js  fkmxsx.js  fknode.js  wkapi.js
webApp/imgedit/: imgedit.html
webApp/imgedit/cssjs/: main.css  main.js
webApp/oppose/: index.html  manifest.webmanifest  sw.js  workbox-75df8a81.js
webApp/oppose/assets/: index-0e7060e2.css
webApp/tietuapp/: tietu.html
webApp/tietuapp/src/css/: index.css
webApp/tietuapp/src/js/: index.js
参考工作流/: FK_高级贴图编辑器2示例.json
